# Solitario

./: CMakeLists.txt  Makefile  README.md  Solitario  main.cpp
include/estructuras/: Carta.h  Cola.h  Historial.h  ListaDoble .h  Nodo.h  Nodo_Lista.h  Nodo_doble.h  Pila.h
include/recursos/: Color.h  RecursosLista.h  Validaciones.h
include/utilidades/: GenerarCartas.h  Iniciar.h  Tablero.h
src/estrucuras/: Cola.cpp  ListaDoble.cpp  Pila.cpp
src/recursos/: RecursosLista.cpp  Validaciones.cpp
src/utilidades/: GenerarCartas.cpp  Historial.cpp  Iniciar.cpp  Tablero.cpp
